--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,12 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Zero food waste</a>
+                <a id="main-title" class="navbar-brand page-scroll" href="#page-top">Zero waste</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right nav-btns">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
@@ -50,14 +50,14 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Last Products </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
+                    </li> -->
+                    <!-- <li>
                         <a class="page-scroll" href="#team">Team</a>
-                    </li>
+                    </li> -->
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Log In</a>
                     </li>
                 </ul>
             </div>
@@ -72,8 +72,8 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Let's save money...</div>
                 <div class="intro-heading">and help  the enviroment</div>
-                <div class="intro-description">check for products in your area, and save money getting products that would otherwise be wasted.</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-description">Check for products in your area, and save money getting products that would otherwise be wasted.</div>
+                <a href="" class="page-scroll btn btn-xl">Check products</a>
             </div>
         </div>
     </header>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
@@ -96,7 +96,15 @@
                     <h4 class="service-heading">Supermarket</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
-                <div class="col-md-4">
+                 <div class="col-md-3">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Fish Shops</h4>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                </div>
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
@@ -104,12 +112,12 @@
                     <h4 class="service-heading">Bakery</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Fish Shops</h4>
+                    <h4 class="service-heading">Butchery</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
             </div>
@@ -214,8 +222,8 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about">
+<!-- About Section -->
+<!--     <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -293,10 +301,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> --> 
 
     <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <!-- <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -357,10 +365,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Clients Aside -->
-    <aside class="clients">
+    <!-- <aside class="clients">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -385,7 +393,7 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside> -->
 
     <!-- Contact Section -->
     <section id="contact">
