--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                 <div class="intro-lead-in">Let's save money...</div>
                 <div class="intro-heading">and help the enviroment</div>
                 <div class="intro-description">Check for products in your area, and save money getting products that would otherwise be wasted.</div>
-                <a href="" class="page-scroll btn btn-xl">Check products</a>
+                <a href="shop.html" class="page-scroll btn btn-xl">Check products</a>
             </div>
         </div>
     </header>
