--- a/public/shop.html
+++ b/public/shop.html
@@ -48,7 +48,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a id="main-title" class="navbar-brand page-scroll" href="#page-top">Zero waste</a>
+                <a id="main-title" class="navbar-brand page-scroll" href="index.html">Zero waste</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -127,7 +127,7 @@
                                 <div class="modal-dialog modal-lg">
                                     <div class="modal-content">
                                         <h1>Frutas y Verduras León</h1>
-                                        <p>Rambla de la Marina, 206, 08907 Hospitalet de Llobregat (L'), Barcelona</p>
+                                        <p>Rambla de la Marina, 206, 08907 Hospitalet de Llobregat (L'), Barcelona<a target="_blank" href="#"> See all products of this shop</a></p>
                                     </div>
                                 </div>
                             </div>
