styles and map img

--- a/public/products.html
+++ b/public/products.html
@@ -20,24 +20,24 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<head>
+<!-- <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Shop Homepage - Start Bootstrap Template</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    -Bootstrap Core CSS -->
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Custom CSS -->
-    <link href="css/shop-homepage.css" rel="stylesheet">
+    <!-- <link href="css/shop-homepage.css" rel="stylesheet"> -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
+
 
 <body>
     <!-- Navigation -->
@@ -62,12 +62,6 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Last Products </a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li> -->
-                    <!-- <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Log In</a>
                     </li>
@@ -125,9 +119,10 @@
                             <img src="img/boqueron-fresco.jpg" alt="">
                             <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-lg">
-                                    <div class="modal-content">
+                                    <div class="modal-content details-modal">
                                         <h1>Frutas y Verduras León</h1>
-                                        <p>Rambla de la Marina, 206, 08907 Hospitalet de Llobregat (L'), Barcelona<a target="_blank" href="#"> See all products of this shop</a></p>
+                                        <p>Rambla de la Marina, 206, 08907 Hospitalet de Llobregat (L'), Barcelona <hr><a target="_blank" href="shops.html"> See all products of this shop</a></p>
+                                        <img src="img/mapa.png">
                                     </div>
                                 </div>
                             </div>
@@ -275,3 +270,4 @@
     <script src="js/agency.min.js"></script>
 
 </html>
+</body>
