style products changed

--- a/public/products.html
+++ b/public/products.html
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="row list-products">
-                    <div class="col-sm-4 col-lg-4 col-md-4" data-toggle="modal" data-target=".bd-example-modal-lg">
+                    <div class="col-sm-4 col-lg-4 col-md-4 products" data-toggle="modal" data-target=".bd-example-modal-lg">
                         <div class="thumbnail">
                           <img class="discount" src="img/discount.png"></img>
                             <img src="img/boqueron-fresco.jpg" alt="">
