--- a/public/shops.html
+++ b/public/shops.html
@@ -67,7 +67,7 @@
     <div class="container">
         <div class="row list-products-shop">
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
+                <div class="thumbnail products">
                     <img class="discount" src="img/discount.png"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
+                <div class="thumbnail products">
                     <img class="discount" src="img/discount.png"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
+                <div class="thumbnail products">
                     <img class="discount" src="img/discount.png"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
+                <div class="thumbnail products">
                     <img class="discount" src="img/discount.png"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
+                <div class="thumbnail products">
                     <img class="discount" src="img/discount.png"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
+                <div class="thumbnail products">
                     <img class="discount" src="img/discount.png"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
