--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right nav-btns">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
+                    <li>
+                        <a class="page-scroll" href="#services">Why Save food</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">Shops</a>
@@ -69,29 +69,29 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">SHOPS</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Shops can get profit selling products that otherwise would give them costs</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-3">
                     <img src="img/market.jpg" class="fish-shop" alt="Cinque Terre">
                     <h4 class="service-heading">Supermarket</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Every day supermarkets through away food that could be still consumed. They lose money everyday and the enviroment also lose.</p>
                 </div>
                 <div class="col-md-3">
                     <img src="img/fish-shop.jpg" class="fish-shop" alt="Cinque Terre">
                     <h4 class="service-heading">Fish Shops</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">With the fish stocks decreasing globally this kind of shops have a important role in the global food save. The impact in all marine life depends on all the small gestures </p>
                 </div>
                 <div class="col-md-3">
                     <img src="img/bakery.jpg" class="fish-shop" alt="Cinque Terre">
                     <h4 class="service-heading">Bakery</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Every day bakeries through away lots of bread, buying in this kind shop at the end of the day can be cheaper and better for everyone.</p>
                 </div>
                 <div class="col-md-3">
                     <img src="img/butchery.jpg" class="fish-shop" alt="Cinque Terre">
                     <h4 class="service-heading">Butchery</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">The impact of the meat production in global enviroment effect is big. Every little saving of meat is one step ahead to help us to keep a better world.</p>
                 </div>
             </div>
         </div>
