--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" n>
 
 <head>
     <meta charset="utf-8">
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right nav-btns">
                     <li>
-                        <a class="page-scroll" href="#services">Why Save food</a>
+                        <a class="page-scroll" href="#main-discription">Why Save food</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">Shops</a>
@@ -44,7 +44,7 @@
                         <a class="page-scroll" href="#portfolio">Last Products </a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#login-section">Log In</a>
+                        <a class="page-scroll" href="login.html">Log In</a>
                     </li>
                 </ul>
             </div>
@@ -63,6 +63,25 @@
             </div>
         </div>
     </header>
+    <section id="main-discription" class="bg-light-gray">
+        <div class="container">
+            <div class="row last-added">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">WHY FIGHT FOOD WASTE</h2>
+                    <h3 class="section-subheading text-muted">Together we can make the difference</h3>
+                    <div class="row discription">
+                    <div class="col-md-6">
+                        <p>Around 88 million tonnes of food are wasted annually in the EU, and over 40% occurs at retail and consuler level. Wasting food depletes the enviroment of limited natural resources and is also a waste of money.It depends of every one of us to do our small part in preventing and reducing food waste.
+                    </div>
+                    <div class="col-md-6">
+                        <p>The misunderstandings understanding of the "best before" and "use by" date labels leading to edible foods being thrown away but a wide range of initiatives to prevent and reduce food waste can be taken. If everyone start at local level to implement some measures, then it will make a big difference to the world. </p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </section>
     <!-- Services Section -->
     <section id="services">
         <div class="container">
@@ -148,70 +167,6 @@
             </div>
         </div>
     </section>
-    <!-- log in Section -->
-    <div id="login-section">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <div class="container">
-            <div class="omb_login">
-                <h3 class="omb_authTitle">Login or <a href="#">Sign up</a></h3>
-                <div class="row omb_row-sm-offset-3 omb_socialButtons">
-                    <div class="col-xs-4 col-sm-2">
-                        <a href="#" class="btn btn-lg btn-block omb_btn-facebook">
-                            <i class="fa fa-facebook visible-xs"></i>
-                            <span class="hidden-xs">Facebook</span>
-                        </a>
-                    </div>
-                    <div class="col-xs-4 col-sm-2">
-                        <a href="#" class="btn btn-lg btn-block omb_btn-twitter">
-                            <i class="fa fa-twitter visible-xs"></i>
-                            <span class="hidden-xs">Twitter</span>
-                        </a>
-                    </div>
-                    <div class="col-xs-4 col-sm-2">
-                        <a href="#" class="btn btn-lg btn-block omb_btn-google">
-                            <i class="fa fa-google-plus visible-xs"></i>
-                            <span class="hidden-xs">Google+</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="row omb_row-sm-offset-3 omb_loginOr">
-                    <div class="col-xs-12 col-sm-6">
-                        <hr class="omb_hrOr">
-                        <span class="omb_spanOr">or</span>
-                    </div>
-                </div>
-                <div class="row omb_row-sm-offset-3">
-                    <div class="col-xs-12 col-sm-6">
-                        <form class="omb_loginForm" action="" autocomplete="off" method="POST">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                                <input type="text" class="form-control" name="username" placeholder="email address">
-                            </div>
-                            <span class="help-block"></span>
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                                <input type="password" class="form-control" name="password" placeholder="Password">
-                            </div>
-                            <span class="help-block">Password error</span>
-                            <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="row omb_row-sm-offset-3">
-                    <div class="col-xs-12 col-sm-3">
-                        <label class="checkbox">
-                            <input type="checkbox" value="remember-me">Remember Me
-                        </label>
-                    </div>
-                    <div class="col-xs-12 col-sm-3">
-                        <p class="omb_forgotPwd">
-                            <a href="#">Forgot password?</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <footer>
         <div class="container">
             <div class="row">
