--- a/public/shops.html
+++ b/public/shops.html
@@ -74,7 +74,7 @@
                         <h4 class="pull-right">$24.99</h4>
                         <h4><a href="#">Fresh fish</a>
                                 </h4>
-                        <p>Fecha de caducidad: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
+                        <p>Date of Expiry: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
                     </div>
                     <div class="distance">
                         <p>Distance: 600m</p>
@@ -89,7 +89,7 @@
                         <h4 class="pull-right">$24.99</h4>
                         <h4><a href="#">Fresh fish</a>
                                 </h4>
-                        <p>Fecha de caducidad: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
+                        <p>Date of Expiry: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
                     </div>
                     <div class="distance">
                         <p>Distance: 600m</p>
@@ -104,7 +104,7 @@
                         <h4 class="pull-right">$24.99</h4>
                         <h4><a href="#">Fresh fish</a>
                                 </h4>
-                        <p>Fecha de caducidad: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
+                        <p>Date of Expiry: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
                     </div>
                     <div class="distance">
                         <p>Distance: 600m</p>
@@ -119,7 +119,7 @@
                         <h4 class="pull-right">$24.99</h4>
                         <h4><a href="#">Fresh fish</a>
                                 </h4>
-                        <p>Fecha de caducidad: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
+                        <p>Date of Expiry: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
                     </div>
                     <div class="distance">
                         <p>Distance: 600m</p>
@@ -134,7 +134,7 @@
                         <h4 class="pull-right">$24.99</h4>
                         <h4><a href="#">Fresh fish</a>
                                 </h4>
-                        <p>Fecha de caducidad: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
+                        <p>Date of Expiry: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
                     </div>
                     <div class="distance">
                         <p>Distance: 600m</p>
@@ -149,7 +149,7 @@
                         <h4 class="pull-right">$24.99</h4>
                         <h4><a href="#">Fresh fish</a>
                                 </h4>
-                        <p>Fecha de caducidad: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
+                        <p>Date of Expiry: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
                     </div>
                     <div class="distance">
                         <p>Distance: 600m</p>
