img discount added

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                         <p>Around 88 million tonnes of food are wasted annually in the EU, and over 40% occurs at retail and consuler level. Wasting food depletes the enviroment of limited natural resources and is also a waste of money.It depends of every one of us to do our small part in preventing and reducing food waste.
                     </div>
                     <div class="col-md-6">
-                        <p>The misunderstandings understanding of the "best before" and "use by" date labels leading to edible foods being thrown away but a wide range of initiatives to prevent and reduce food waste can be taken. If everyone start at local level to implement some measures, then it will make a big difference to the world. </p>
+                        <p>The misunderstandings of the "best before" and "use by" date labels leading to edible foods being thrown away but a wide range of initiatives to prevent and reduce food waste can be taken. If everyone start at local level to implement some measures, then it will make a big difference to the world. </p>
                     </div>
                     </div>
                 </div>
