--- a/public/products.html
+++ b/public/products.html
@@ -79,39 +79,11 @@
                 </select>
             </div>
             <div class="col-md-9">
-                <!-- <div class="main-carousel row carousel-holder">
-                    <div class="col-md-12">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="item active">
-                                    <img class="slide-image" src="img/market.jpg" alt="">
-                                </div>
-                                <div class="item">
-                                    <img class="slide-image" src="img/carrots.jpg" alt="">
-                                </div>
-                                <div class="item">
-                                    <img class="slide-image" src="img/croissants.jpg" alt="">
-                                </div>
-                            </div>
-                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left"></span>
-                            </a>
-                            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </div> -->
                 <p class="result-input">Searching for: {{sometext}}</p>
                 <div class="row list-products">
-                    <div class="col-sm-4 col-lg-4 col-md-4" type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">
+                    <div class="col-sm-6 col-lg-4 col-md-4" type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">
                         <div class="thumbnail products">
-                          <img class="discount" src="img/discount.png"></img>
+                          <img class="discount" src="img/discount50.jpeg"></img>
                             <img src="img/boqueron-fresco.jpg" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">$24.99</h4>
@@ -125,8 +97,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="col-sm-6 col-lg-4 col-md-4">
                         <div class="thumbnail products">
+                        <img class="discount" src="img/discount50.jpeg"></img>
                             <img src="img/ensalada.jpg" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">$24.99</h4>
@@ -140,8 +113,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="col-sm-6 col-lg-4 col-md-4">
                         <div class="thumbnail products">
+                        <img class="discount" src="img/discount50.jpeg"></img>
                             <img src="img/pan-barra.jpg" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">$24.99</h4>
@@ -155,8 +129,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="col-sm-6 col-lg-4 col-md-4">
                         <div class="thumbnail products">
+                        <img class="discount" src="img/discount50.jpeg"></img>
                             <img src="img/croissants.jpg" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">$24.99</h4>
@@ -170,8 +145,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="col-sm-6 col-lg-4 col-md-4">
                         <div class="thumbnail products">
+                        <img class="discount" src="img/discount50.jpeg"></img>
                             <img src="img/carrots.jpg" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">$24.99</h4>
@@ -185,8 +161,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="col-sm-6 col-lg-4 col-md-4">
                         <div class="thumbnail products" data-toggle="#modal">
+                        <img class="discount" src="img/discount50.jpeg"></img>
                             <img src="img/pollo-asado.jpg" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">$24.99</h4>
