--- a/public/shops.html
+++ b/public/shops.html
@@ -68,7 +68,7 @@
         <div class="row list-products-shop">
             <div class="col-sm-4 col-lg-4 col-md-4">
                 <div class="thumbnail products">
-                    <img class="discount" src="img/discount.png"></img>
+                    <img class="discount" src="img/discount50.jpeg"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
                         <h4 class="pull-right">$24.99</h4>
@@ -83,7 +83,7 @@
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
                 <div class="thumbnail products">
-                    <img class="discount" src="img/discount.png"></img>
+                    <img class="discount" src="img/discount50.jpeg"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
                         <h4 class="pull-right">$24.99</h4>
@@ -98,7 +98,7 @@
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
                 <div class="thumbnail products">
-                    <img class="discount" src="img/discount.png"></img>
+                    <img class="discount" src="img/discount50.jpeg"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
                         <h4 class="pull-right">$24.99</h4>
@@ -113,7 +113,7 @@
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
                 <div class="thumbnail products">
-                    <img class="discount" src="img/discount.png"></img>
+                    <img class="discount" src="img/discount50.jpeg"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
                         <h4 class="pull-right">$24.99</h4>
@@ -128,7 +128,7 @@
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
                 <div class="thumbnail products">
-                    <img class="discount" src="img/discount.png"></img>
+                    <img class="discount" src="img/discount50.jpeg"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
                         <h4 class="pull-right">$24.99</h4>
@@ -143,7 +143,7 @@
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4">
                 <div class="thumbnail products">
-                    <img class="discount" src="img/discount.png"></img>
+                    <img class="discount" src="img/discount50.jpeg"></img>
                     <img src="img/boqueron-fresco.jpg" alt="">
                     <div class="caption">
                         <h4 class="pull-right">$24.99</h4>
