filter price added

--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,9 @@
     <script type="text/javascript" src="js/controllers/uploadController.js"></script>
     <!-- SERVICES/FACTORY -->
     <script type="text/javascript" src="js/services/ApiService.js"></script>
+    <!-- Script for API Google and Ng-map -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDafjpKKDyuZewwazCQGpx6uUnjZHGODR8"></script>
+    <script type="text/javascript" src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
 </body>
 
 </html>
